--- a/views/callback.slim
+++ b/views/callback.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Authentication helper application
+    title Authentication callback
   body
     h1
       - params[:provider]
